// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckBox /> should render checkbox component 1`] = `
<View
  accessibilityLabel="checbox de "
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "opacity": 1,
    }
  }
  testID="checbox de "
>
  <View
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {},
        {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../react-native-check-box/img/ic_check_box_outline_blank.png",
          }
        }
        style={
          {
            "tintColor": "#42CCD4",
          }
        }
      />
    </View>
  </View>
  <Text
    accessibilityLabel=""
    lineHeightVariant="min"
    style={
      [
        {
          "color": "#444444",
          "fontSize": 15,
          "lineHeight": 18,
        },
        {
          "color": "#444444",
          "flexDirection": "row",
          "marginLeft": 8,
          "opacity": 0.8,
        },
      ]
    }
    variant="md"
  />
</View>
`;

exports[`<CheckBox /> should render checkbox in checked state 1`] = `
<View
  accessibilityLabel="checbox de "
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "opacity": 1,
    }
  }
  testID="checbox de "
>
  <View
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {},
        {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../react-native-check-box/img/ic_check_box.png",
          }
        }
        style={
          {
            "tintColor": "#42CCD4",
          }
        }
      />
    </View>
  </View>
  <Text
    accessibilityLabel=""
    lineHeightVariant="min"
    style={
      [
        {
          "color": "#444444",
          "fontSize": 15,
          "lineHeight": 18,
        },
        {
          "color": "#444444",
          "flexDirection": "row",
          "marginLeft": 8,
          "opacity": 0.8,
        },
      ]
    }
    variant="md"
  />
</View>
`;

exports[`<CheckBox /> should render checkbox with custom label style 1`] = `
<View
  accessibilityLabel="checbox de Jest Checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "opacity": 1,
    }
  }
  testID="checbox de Jest Checkbox"
>
  <View
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {},
        {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../react-native-check-box/img/ic_check_box_outline_blank.png",
          }
        }
        style={
          {
            "tintColor": "#42CCD4",
          }
        }
      />
    </View>
  </View>
  <Text
    accessibilityLabel="Jest Checkbox"
    lineHeightVariant="min"
    style={
      [
        {
          "color": "#444444",
          "fontSize": 15,
          "lineHeight": 18,
        },
        {
          "color": "#444444",
          "flexDirection": "row",
          "marginLeft": 8,
          "opacity": 0.8,
        },
        {
          "color": "#e74c3c",
        },
      ]
    }
    variant="md"
  >
    Jest Checkbox
  </Text>
</View>
`;

exports[`<CheckBox /> should render checkbox with error message 1`] = `
[
  <View
    accessibilityLabel="checbox de "
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "opacity": 1,
      }
    }
    testID="checbox de "
  >
    <View
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {},
          {
            "marginBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Image
          source={
            {
              "testUri": "../../react-native-check-box/img/ic_check_box_outline_blank.png",
            }
          }
          style={
            {
              "tintColor": "#42CCD4",
            }
          }
        />
      </View>
    </View>
    <Text
      accessibilityLabel=""
      lineHeightVariant="min"
      style={
        [
          {
            "color": "#444444",
            "fontSize": 15,
            "lineHeight": 18,
          },
          {
            "color": "#444444",
            "flexDirection": "row",
            "marginLeft": 8,
            "opacity": 0.8,
          },
        ]
      }
      variant="md"
    />
  </View>,
  <Text
    accessibilityLabel="Erro checkbox"
    centered={false}
    large={false}
    lineHeightVariant="min"
    style={
      [
        {
          "color": "#444444",
          "fontSize": 13,
          "lineHeight": 15.6,
        },
        {
          "color": "#FF4F3F",
          "marginTop": 4,
          "textAlign": "left",
        },
      ]
    }
    testID="error_testing"
    variant="xs"
  >
    This field is required
  </Text>,
]
`;

exports[`<CheckBox /> should render checkbox with label 1`] = `
<View
  accessibilityLabel="checbox de Jest Checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "opacity": 1,
    }
  }
  testID="checbox de Jest Checkbox"
>
  <View
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {},
        {
          "marginBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../react-native-check-box/img/ic_check_box_outline_blank.png",
          }
        }
        style={
          {
            "tintColor": "#42CCD4",
          }
        }
      />
    </View>
  </View>
  <Text
    accessibilityLabel="Jest Checkbox"
    lineHeightVariant="min"
    style={
      [
        {
          "color": "#444444",
          "fontSize": 15,
          "lineHeight": 18,
        },
        {
          "color": "#444444",
          "flexDirection": "row",
          "marginLeft": 8,
          "opacity": 0.8,
        },
      ]
    }
    variant="md"
  >
    Jest Checkbox
  </Text>
</View>
`;
